[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "serde_json", "postgres_backend", "postgres"] }
dotenvy = "0.15.7"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = "0.8.3"
tokio = "1.43.0"
