[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "serde_json", "postgres_backend", "postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = "0.8.3"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"]}
url_encoded_data = "0.6.1"
